--- a/samples/HttpClients/HttpClients.csproj
+++ b/samples/HttpClients/HttpClients.csproj
@@ -5,15 +5,16 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>ClassClient</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\HttpClientTestDouble\HttpClientTestDouble.csproj" />
+        <ProjectReference Include="..\..\src\HttpMocker\HttpMocker.csproj" />
     </ItemGroup>
 
 </Project>
