--- a/src/HttpMocker/HttpMocker.csproj
+++ b/src/HttpMocker/HttpMocker.csproj
@@ -26,6 +26,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <InternalsVisibleTo Include="UnitTests" />
+    </ItemGroup>
+  
+    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     </ItemGroup>
