--- a/src/HttpMocker/HttpMocker.csproj
+++ b/src/HttpMocker/HttpMocker.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
@@ -22,6 +22,7 @@
         <RepositoryUrl>https://github.com/adamjez/http-mocker</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
 
+        <LangVersion>10</LangVersion>
         <IsPackable>true</IsPackable>
     </PropertyGroup>
 
@@ -29,9 +30,15 @@
         <InternalsVisibleTo Include="UnitTests" />
     </ItemGroup>
   
-    <ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.0" />
+      <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
